<resources>
    <!-- Global -->
    <string name="app_name">WeeberEat</string>
    <string name="menu">Menu</string>
    <string name="home">Accueil</string>
    <string name="cancel">Annuler</string>
    <string name="save">Sauvegarder</string>
    <string name="connection">Se connecter</string>
    <string name="register">S\'inscrire</string>
    <string name="parameters">Paramètres</string>
    <string name="name">Nom</string>
    <string name="first_name">Prenom</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="password_verification">Retaper le mot de passe</string>
    <string name="address">Adresse</string>
    <string name="additional_address">Complément d\'adresse</string>
    <string name="city">Ville</string>
    <string name="country">Pays</string>
    <string name="postal_code">Code Postal</string>
    <string name="phone">Téléphone</string>
    <string name="search">Rechercher</string>
    <string name="more">Plus</string>
    <string name="required">Requis</string>
    <string name="restaurant_name">Nom du restaurant</string>
    <string name="restaurant_connection">Connexion restaurateur</string>
    <string name="delete_all">Tout annuler</string>
    <string name="history">Historique</string>
    <string name="logout">Se déconnecter</string>
    <string name="exit">Quitter</string>
    <string name="category">catégorie</string>
    <string name="available">Disponible</string>
    <string name="unavailable">Indisponible</string>
    <string name="description">Description</string>
    <string name="price">prix</string>
    <string name="cart">Panier</string>


    <!-- Success message -->
    <string name="success_connection">Connexion réussie</string>

    <!-- Warning message -->
    <string name="warn_no_restaurant_available">Aucun restaurant disponible.</string>
    <string name="warn_logout">Vous avez été déconnecté</string>

    <!-- Error message -->
    <string name="err_empty_field">Champ vide</string>
    <string name="err_password_length">8 caractères min.</string>
    <string name="err_password_not_equals">mot de passe différent</string>
    <string name="err_occurred">Oups… Une erreur est survenue, veuillez-réessayer</string>
    <string name="err_connection">Connexion impossible, vérifiez votre connexion internet</string>
    <string name="err_400">Valeurs manquantes ou mal formatés</string>
    <string name="err_404">Email ou mot de passe incorrect</string>
    <string name="err_409">Email déjà utilisé</string>
    <string name="err_unauthorized">Vous n\'êtes pas autorisé à faire ça !</string>

    <!-- Content description -->
    <string name="content_mock_description">Description. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="content_description_more">Voir plus</string>
    <string name="content_description_cart_bar">Accéder à votre panier</string>
    <string name="content_description_search_bar">Rechercher un restaurant, catégories etc…</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Ouvrir le tiroir de navigation</string>
    <string name="navigation_drawer_close">Fermer le tiroir de navigation</string>
    <string name="my_account">Mon compte</string>
    <string name="my_orders">Mes commandes</string>
    <string name="my_cart">Mon panier</string>
    <string name="my_products">Mes produits</string>
    <string name="my_menus">Mes menus</string>


    <!-- AccountFragment -->
    <string name="new_password">Nouveau mot de passe</string>
    <string name="change_user_information">Modifier mes informations et/ou mot de passe</string>

    <!-- CartFragment -->
    <string name="cart_header">Votre panier</string>

    <!-- AuthenticationFragment -->
    <string name="client_connection">Connexion client</string>
    <string name="deliverer_connection">Connexion livreur</string>
    <string name="auth_header">Je souhaite me connecter en tant que :</string>
    <string name="auth_client_btn">Client Homosapiens</string>
    <string name="auth_deliverer_btn">Livreur de compétition</string>
    <string name="auth_restaurant_btn">Restaurateur aguerris</string>
    <string name="is_already_subscribe">Déjà inscrit ?</string>
    <string name="is_new_client_text">Nouveau client ?</string>
    <string name="is_new_deliverer_text">Nouveau livreur ?</string>
    <string name="is_new_restaurant_text">Nouveau restaurant ?</string>

    <!-- ClientActivity -->
    <string name="restaurants">Restaurants</string>

    <!-- DelivererActivity -->
    <string name="param_state_description">Choisir votre status pour définir votre disponibilité et/ou gérer les notifications.</string>
    <string name="state_unavailable_text">Vous ne recevrez pas les notifications lorsqu\'une nouvelle course près de vous est disponible</string>
    <string name="state_available_text">Vous recevrez les notifications lorsqu\'une nouvelle course près de vous est disponible</string>

    <!-- RestaurantActivity -->
    <string name="status">Status</string>
    <string name="menu_name">Nom du menu</string>
    <string name="add_to_cart">Ajouter au panier</string>
    <string name="pay">payer</string>
    <string name="payment">Paiement</string>
    <string name="card_numbers">Numéro de la carte</string>
    <string name="command_success">Votre commande est validée</string>
    <string name="products">Produits</string>
    <string name="empty_cart">Votre panier est vide</string>
    <string name="image">Image</string>
    <string name="type">Type</string>
    <string name="extra">Extra</string>
    <string name="add">Ajouter</string>
    <string name="in_progress">En cours de développement…</string>
    <string name="products_editor">Editeur de produits</string>
    <string name="new_product">Nouveau produit</string>
    <string name="new_menu">Nouveau menu</string>
    <string name="meal">Repas</string>
    <string name="accompaniment">Accompagnement</string>
    <string name="drink">Boisson</string>
    <string name="sauce">Sauce</string>
    <string name="burger">Burger</string>
    <string name="sushi">Sushi</string>
    <string name="salad">Salade</string>
    <string name="soup">Soupe</string>
    <string name="noodles">Nouilles</string>
    <string name="success_add_product">Le produit a été ajouté</string>
    <string name="error_add_product">Le produit n\'as pas pus être ajouté</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove">supprimer</string>
    <string name="success_remove_product">Le produit a bien été supprimé</string>
    <string name="warn_no_pending_order">Pas de commande en attente.</string>
    <string name="current_orders">Commande en cours</string>
    <string name="no_current_command">Aucune commande en cours</string>
</resources>
