<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/activity_main_drawer_home"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/home"
            android:checked="true" />

        <item
            android:id="@+id/activity_main_drawer_user"
            android:icon="@drawable/ic_round_person_24"
            android:title="@string/connection" />

        <item
            android:id="@+id/activity_main_drawer_user_account"
            android:icon="@drawable/ic_round_person_24"
            android:title="@string/fg_account_header" />

        <item
            android:id="@+id/activity_main_drawer_parameters"
            android:icon="@drawable/ic_round_build_24"
            android:title="@string/parameters" />
    </group>
</menu>