<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/medium_spacing"
    tools:context=".ui.productEditor.ProductEditorFragment">

    <TextView
        android:id="@+id/product_information_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/small_spacing"
        android:text="Informations produit"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:drawableStartCompat="@drawable/ic_baseline_lunch_dining_24"
        app:drawableTint="@color/orange_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/product_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="Nom du produit"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_information_header">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:maxLength="50"
            android:text="Burger végie" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/product_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/description"
        app:counterEnabled="true"
        app:counterMaxLength="120"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="Description du produit"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:maxLength="120"
            android:text="@string/content_mock_description" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/product_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/type"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:errorEnabled="true"
        app:helperText="Type du produit"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_description">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:maxLength="25" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/product_extras_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawablePadding="@dimen/small_spacing"
        android:text="@string/extra"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:drawableStartCompat="@drawable/ic_baseline_lunch_dining_24"
        app:drawableTint="@color/orange_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_type" />

    <TextView
        android:id="@+id/extras_not_available_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="@dimen/small_spacing"
        android:text="@string/in_progress"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textStyle="italic"
        app:drawableStartCompat="@drawable/ic_round_build_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_extras_header" />

    <LinearLayout
        android:id="@+id/fg_auth_client_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extras_not_available_header">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/medium_spacing"
            android:layout_weight="0.5"
            android:backgroundTint="@color/red_500"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_spacing"
            android:layout_weight="0.5"
            android:backgroundTint="@color/main_green"
            android:text="@string/add" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remove_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/remove"
        android:textColor="@color/red_500"
        app:icon="@drawable/ic_round_delete_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/small_spacing"
        app:iconTint="@color/red_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fg_auth_client_buttons"
        app:strokeColor="@color/red_500"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>